--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,23 +1,154 @@
 $fontfamily:'Lato';
-$afont:'Lato';
-$wievport: 980px;
-$dark: #fff;
+$yellow: #fff200;
 
-*{margin:0;padding:0;box-sizing:border-box;background-position:center;background-repeat:no-repeat}
-:after,:before{content:"";display:block;width:100%;height:0;clear:both}
-sup:after,sup:before,a:after,a:before,br:after,br:before,img:after,img:before,span:after,span:before,table:after,table:before,td:after,td:before,tr:after,tr:before{content:none}
-h1,h2,h3,h4,h5{font-size:1em;font-weight:inherit;text-align:center;font-family: $afont;font-weight: 300;letter-spacing: 0.01em}
-body{font-family:$fontfamily,sans-serif;font-weight:400;color: $dark;font-size: 14px;}
+body{font-family:$fontfamily,sans-serif;font-weight:400;color: #fff;font-size: 14px;color: #999;}
 a{text-decoration:none;color:inherit;outline:0!important}
+
 button,input,textarea{outline: none;}
 
 #maket {
-    position: absolute;
-    top: 0px;
-    left: 0;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  background: url(../maket.jpg) no-repeat top center;
+  height: 13200px;
+  opacity: 0.5;
+  z-index: 10;  
+}
+
+
+.navbar_right {
+  float: right;
+  margin-right: 30px;
+}
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px;
+  border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.navbar-default{
+  background: #fff;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+  background: transparent;
+  color: #232323;
+  font-weight: bold;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+  background: transparent;
+  color: #232323;
+}
+
+.navbar-default .navbar-nav>li>a {
+  font-size: 16px;
+  color: #232323;
+}
+
+.nav>li>a {
+  padding: 25px 27px;
+}
+
+.navbar {
+  min-height: 70px;
+}
+.navbar-right {
+  margin-right: 0;
+}
+
+.navbar>.container .navbar-brand {
+  margin-top: 10px;
+}
+
+.form_header {
+  position: relative;
+  width: 180px;
+  margin-top: 20px;
+  input {
+    background: #e8e4f1;
     width: 100%;
-    background: url(../maket.jpg) no-repeat top center;
-    height: 13200px;
-    opacity: 0.5;
-    z-index: 10;  
+    padding: 10px;
+    height: 30px;
+    border: none;
+  }
+  button {
+    position: absolute;
+    right: 23px;
+    top: 4px;
+    border: none;
+    background: transparent;
+  }
+}
+
+.dropdown-menu {
+  padding: 15px 28px !important;
+  color: #fff;
+  border-top: 2px solid $yellow;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.6);
+  border-radius: 0;
+}
+
+.dropdown-menu>li>a {
+  padding: 0;
+  font-size: 16px;
+  color: #fff;
+  line-height: 36px;
+}
+.dropdown-submenu > a:after {
+  display: none;
+}
+.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
+  background: transparent;
+  color: $yellow;
+}
+
+.dropdown-submenu:hover > .dropdown-menu {
+  margin-left: 29px;
+  border-radius: 0;
+}
+
+.section-slider {
+  height: 100vh;
+  position: relative;
+  .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
 }
