--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -3,7 +3,7 @@ $yellow: #fff200;
 $blue: #009dda;
 $black: #232323;
 
-body{font-family:$fontfamily,sans-serif;font-weight:400;color: #fff;font-size: 14px;color: #999;}
+body{font-family:$fontfamily,sans-serif;font-weight:400;color: #fff;font-size: 14px;color: #999;min-width: 320px;}
 a{text-decoration:none;color:inherit;outline:0!important}
 
 button,input,textarea{outline: none;}
@@ -214,7 +214,7 @@ button,input,textarea{outline: none;}
   }
   .col-md-2 {
     padding: 0 !important;
-    margin: 0 19.5px;
+    margin: 0 1.6%;
   }
   .item {
     border: 1px solid #ccc;
@@ -353,5 +353,215 @@ button,input,textarea{outline: none;}
       height: 7px;
       margin: 1px;
     }
+  }
+}
+
+
+.section-aboutus {
+  padding-top: 75px;
+  p {
+    line-height: 24px;
+    color: $black;
+  }
+  p.sec-dec {
+    color: #ccc;
+    margin: 25px 0 45px;
+  }
+  .list-skill {
+    margin-top: 60px;
+    .item-skill {
+      p {
+        font-size: 13px;
+        text-transform: uppercase;
+        color: $black;
+        font-weight: bold;
+      }
+      & > div {
+        border: 1px solid #ccc;
+        padding: 2px 3px;
+        & > div {
+          right: 0;
+          left: inherit !important;
+          top: -25px !important;
+          color: $black !important;
+        }
+      }
+      margin-bottom: 35px;
+    }
+  }
+  .ipad-wrap {
+    text-align: right;
+    margin-top: 90px;
+  }
+}
+
+.section-getin {
+  padding-top: 40px;
+  padding-bottom: 70px;
+  text-align: center;
+  h2 {
+    margin-bottom: 23px;
+  }
+  p {
+    line-height: 24px;
+  }
+}
+
+.section-contact {
+  background: url(../img/map.png) no-repeat center;
+}
+
+.wrap-contact {
+  padding: 80px 67px;
+  background: rgba(0,0,0,.53);
+  .form-contact {
+    width: calc(100% - 40px);
+    input, textarea {
+      width: 100%;
+      padding: 10px 20px;
+      font-size: 16px;
+      color: #b7b7b7;
+      border: 1px solid #b7b7b7;
+      background: transparent;
+    }
+    input {
+      margin-bottom: 20px;
+      display: inline-block;
+      width: calc(50% - 10px;);
+      &:first-child {
+        margin-right: 16px;
+      }
+    }
+    textarea {
+      height: 140px;
+      margin-bottom: 30px;
+    }
+    .checkbox {
+    display: none !important;
+    }
+     label {
+      line-height: 23px;
+      font-size: 16px;
+    }
+    label:before {
+      content: "";
+      float: left;
+      width: 23px;
+      height: 23px;
+      margin-right: 5px;
+      opacity: 0.5;
+      border: 1px solid white;
+    }
+    .checkbox:checked + label:before {
+      content: "\2713";
+      float: left;
+      font-size: 15px;
+      color: #f3f3f3;
+      text-align: center;
+      line-height: 23px;
+    }
+    button {
+      float: right;
+      display: block;
+      width: 120px;
+      height: 50px;
+      background-color: yellow;
+      text-align: center;
+      border: none;
+      color: $black;
+      font-size: 16px;
+      line-height: 50px;
+      margin-top: -15px;
+    }
+  }
+  .contact-dec {
+    padding-left: 20px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+}
+
+.footer-page {
+  height: 64px;
+  background-color: #1a1a1a;
+  padding: 0 20px;
+  line-height: 60px;
+  p {
+    display: inline-block;
+    color: #7a7a7a;
+    line-height: 64px;
+    font-size: 16px;
+    margin-bottom: 0;
+  }
+  .social {
+    float: right;
+  }
+  ul {
+    padding: 0;
+    margin: 0;
+  }
+  li {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 18px;
+    line-height: 60px;
+    &:nth-child(1) {color: #6782b8;}
+    &:nth-child(2) {color: #f07156;}
+    &:nth-child(3) {color: #71d6fa;}
+    &:nth-child(4) {color: #e9779d;}
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .navbar-toggle {
+    display: block;
+    margin-top: 20px;
+  }
+  .navbar-collapse.collapse {
+    display: none !important;
+    ul {
+      width: 100%;
+    }
+  }
+  .navbar-collapse.collapse.in {
+    display: block !important;
+  }
+  .navbar-header,
+  .form_header,
+  .navbar-nav>li {
+    width: 100%;
+  }
+  .navbar_right {
+    float: none;
+    display: block;
+    width: 100%;
+  }
+  .dropdown-menu {
+    position: relative;
+    top: auto !important;
+    left: auto !important;
+    background: transparent;
+    padding: 0 0 0 40px !important;
+    border: none;
+    box-shadow: none;
+    color: $black;
+    li a {
+      color: $black;
+      &:hover {
+        color: $black;
+        font-weight: bold;
+      }
+    }
+  }
+  .nav > li > a {
+    padding: 10px;
+  }
+  .section-aboutus .ipad-wrap {
+    text-align: center;
+  }
+  .section-page {
+    padding: 50px;
   }
 }
